--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -200,6 +200,7 @@
         "createTime":"Create Time"
     },
     "salarySettingBody":{
+        "col-userIdPrompt":"If the ID is already set, it will be updated; otherwise, it will be added.",
         "col-userId":"UserId",
         "col-username":"UserName",
         "col-baseSalary":"BaseSalary",
@@ -210,25 +211,15 @@
         "col-active":"Active",
         "col-lock":"Lock",
         "col-config":"Config",
-        "active":{
-            "true":"Active",
-            "false":"InActive"
-        },
-        "lock":{
-            "true":"Lock",
-            "false":"UnLock"
-        },
         "total":"Total",
         "totalQuantifier":"",
         "pageQuantifier":"/page",
         "search":"Search",
         "addNewRoot":"Add New Setting",
         "cancel":"Cancel",
-        "submit":"Submit",
-        "new":"New",
         "save":"Save",
         "updateSuccess":"Update successful",
-        "pleaseInputUserName":"Please Input UserName.",
+        "pleaseInputBaseSalary":"Please enter at least the base salary.",
         "pleaseInputUserId":"Please Input UserId"
     },
 
