update edit salary root

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -216,6 +216,7 @@
         "pageQuantifier":"/page",
         "search":"Search",
         "addNewRoot":"Add New Setting",
+        "editRoot":"Edit Salary Setting",
         "cancel":"Cancel",
         "save":"Save",
         "updateSuccess":"Update successful",
