--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -241,7 +241,8 @@
         "rolePermission":"角色權限管理",
         "roleMenu":"菜單管理",
         "salaryList":"薪資清單",
-        "salarySetting":"薪資設置"
+        "salarySetting":"薪資設置",
+        "performanceList":"個人績效"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
