--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -221,6 +221,29 @@
         "pleaseInputBaseSalary":"Please enter at least the base salary.",
         "pleaseInputUserId":"Please Input UserId"
     },
+    "personalPerformance":{
+        "search":"Search",
+        "to":"To",
+        "status":"Status",
+        "All":"All",
+        "Pending":"Pending",
+        "Approved":"Approved",
+        "Closed":"Closed",
+        "Removed":"Removed",
+        "col-createTime":"Create Time",
+        "col-eventTime":"Event Time",
+        "col-event":"Event",
+        "col-fixedBonus":"Fixed Bonus",
+        "col-performanceRatio":"Performance Ratio",
+        "col-status":"Performance Status",
+        "total":"Total",
+        "totalQuantifier":"",
+        "pageQuantifier":"/page",
+        "applyPerformance":"Apply Performance",
+        "submit":"Save",
+        "pleaseInputEvent":"Please Input Event",
+        "pleaseInputEventTime":"Please Input EventTime"
+    },
 
 
 
