--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -221,6 +221,29 @@
         "pleaseInputBaseSalary":"請至少輸入基本薪資",
         "pleaseInputUserId":"請輸入用戶ID"
     },
+    "personalPerformance":{
+        "search":"搜尋",
+        "to":"到",
+        "status":"狀態",
+        "All":"全部",
+        "Pending":"待審核",
+        "Approved":"已審核",
+        "Closed":"已結算",
+        "Removed":"已取消",
+        "col-createTime":"創建時間",
+        "col-eventTime":"事件時間",
+        "col-event":"事件內容",
+        "col-fixedBonus":"固定績效",
+        "col-performanceRatio":"比例績效",
+        "col-status":"績效狀態",
+        "total":"總數",
+        "totalQuantifier":"條",
+        "pageQuantifier":"/頁",
+        "applyPerformance":"績效申請",
+        "submit":"保存",
+        "pleaseInputEvent":"請輸入績效內容",
+        "pleaseInputEventTime":"請輸入績效時間"
+    },
 
 
 
