--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -244,6 +244,33 @@
         "pleaseInputEvent":"請輸入績效內容",
         "pleaseInputEventTime":"請輸入績效時間"
     },
+    "performanceList":{
+        "search":"搜尋",
+        "userId":"用戶Id",
+        "to":"到",
+        "status":"狀態",
+        "All":"全部",
+        "Pending":"待審核",
+        "Approved":"已審核",
+        "Closed":"已結算",
+        "Removed":"已取消",
+        "col-userId":"用戶Id",
+        "col-userName":"用戶名稱",
+        "col-createTime":"創建時間",
+        "col-eventTime":"事件時間",
+        "col-event":"事件內容",
+        "col-fixedBonus":"固定績效",
+        "col-performanceRatio":"比例績效",
+        "col-status":"績效狀態",
+        "total":"總數",
+        "totalQuantifier":"條",
+        "pageQuantifier":"/頁",
+        "applyPerformance":"績效申請",
+        "submit":"保存",
+        "inputUserId":"輸入用戶Id",
+        "pleaseInputEvent":"請輸入績效內容",
+        "pleaseInputEventTime":"請輸入績效時間"
+    },
 
 
 
