--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -254,6 +254,7 @@
         "Approved":"Approved",
         "Closed":"Closed",
         "Removed":"Removed",
+        "col-applyUser":"Apply User",
         "col-userId":"User Id",
         "col-userName":"User Name",
         "col-createTime":"Create Time",
@@ -262,14 +263,23 @@
         "col-fixedBonus":"Fixed Bonus",
         "col-performanceRatio":"Performance Ratio",
         "col-status":"Performance Status",
+        "col-review":"Review",
         "total":"Total",
         "totalQuantifier":"",
         "pageQuantifier":"/page",
         "applyPerformance":"Apply Performance",
-        "submit":"Save",
+        "save":"Save",
         "inputUserId":"Input UserId",
+        "pleaseInputUserId":"Please Input UserId",
         "pleaseInputEvent":"Please Input Event",
-        "pleaseInputEventTime":"Please Input EventTime"
+        "pleaseInputEventTime":"Please Input EventTime",
+        "pleaseInputAmount":"Please input at least one performance amount",
+        "reviewPerformance":"Review Performance",
+        "performanceId":"Performance Id",
+        "btn-approved":"Approved",
+        "btn-save":"Save",
+        "btn-rejected":"Rejected",
+        "pleaseSaveFirst": "Please save first before approving"
     },
 
 
