--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -230,6 +230,9 @@
         "Approved":"已審核",
         "Closed":"已結算",
         "Removed":"已取消",
+        "col-userId":"用戶Id",
+        "col-userName":"用戶名稱",
+        "col-settleYear":"統計年度",
         "col-createTime":"創建時間",
         "col-eventTime":"事件時間",
         "col-event":"事件內容",
@@ -242,7 +245,10 @@
         "applyPerformance":"績效申請",
         "submit":"保存",
         "pleaseInputEvent":"請輸入績效內容",
-        "pleaseInputEventTime":"請輸入績效時間"
+        "pleaseInputEventTime":"請輸入績效時間",
+        "personalAnnualPerformance":"個人年度績效",
+        "annualPerformance":"年度績效總計",
+        "count":"績效總數"
     },
     "performanceList":{
         "search":"搜尋",
@@ -279,7 +285,8 @@
         "btn-approved":"通過審核",
         "btn-save":"暫存",
         "btn-rejected":"駁回績效",
-        "pleaseSaveFirst":"請先做儲存才能通過審核"
+        "pleaseSaveFirst":"請先做儲存才能通過審核",
+        "annualPerformance":"年度績效"
     },
 
 
