--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -335,7 +335,7 @@
         "personalPerformance":"個人績效",
         "performanceList":"績效管理",
         "personalLeave":"個人休假",
-        "leaveList":"休假審核"
+        "leaveList":"休假清單"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
