update leave status css

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -309,6 +309,10 @@
         "pleaseSelectType":"Please Select Leave Type",
         "pleaseSelectTime":"Please Select Leave Time",
         "success":"Operation successful",
+        "Pending":"Pending",
+        "Approved":"Approved",
+        "Closed":"Closed",
+        "Removed":"Removed",
         "":""
     },
 
