--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -276,6 +276,7 @@
         "applyPerformance":"Apply Performance",
         "save":"Save",
         "inputUserId":"Input UserId",
+        "selectUser":"Select User",
         "pleaseInputUserId":"Please Input UserId",
         "pleaseInputEvent":"Please Input Event",
         "pleaseInputEventTime":"Please Input EventTime",
@@ -305,6 +306,7 @@
         "totalQuantifier":"",
         "pageQuantifier":"/Page",
         "to":"to",
+        "delete":"Delete",
         "submit":"Save",
         "pleaseSelectType":"Please Select Leave Type",
         "pleaseSelectTime":"Please Select Leave Time",
@@ -312,8 +314,46 @@
         "Pending":"Pending",
         "Approved":"Approved",
         "Closed":"Closed",
+        "Removed":"Removed"
+    },
+    "leaveList":{
+        "search":"Search",
+        "userId":"UserId",
+        "to":"To",
+        "status":"Status",
+        "All":"All",
+        "Pending":"Pending",
+        "Approved":"Approved",
+        "Closed":"Closed",
         "Removed":"Removed",
-        "":""
+        "col-applyUser":"Apply User",
+        "col-userId":"User Id",
+        "col-userName":"User Name",
+        "col-createdTime":"Create Time",
+        "col-startTime":"Start Time",
+        "col-endTime":"End Time",
+        "col-info":"Info",
+        "col-type":"Leave Type",
+        "col-performanceRatio":"Performance Ratio",
+        "col-status":"Performance Status",
+        "col-review":"Review",
+        "total":"Total",
+        "totalQuantifier":"",
+        "pageQuantifier":"/page",
+        "applyPerformance":"Apply Performance",
+        "save":"Save",
+        "inputUserId":"Input UserId",
+        "selectUser":"Select User",
+        "pleaseInputUserId":"Please Input UserId",
+        "pleaseInputEvent":"Please Input Event",
+        "pleaseInputEventTime":"Please Input EventTime",
+        "pleaseInputAmount":"Please input at least one performance amount",
+        "reviewPerformance":"Review Performance",
+        "performanceId":"Performance Id",
+        "btn-approved":"Approved",
+        "btn-save":"Save",
+        "btn-rejected":"Rejected",
+        "pleaseSaveFirst": "Please save first before approving"
     },
 
 
