--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -276,6 +276,7 @@
         "applyPerformance":"績效申請",
         "save":"保存",
         "inputUserId":"輸入用戶Id",
+        "selectUser":"選擇用戶",
         "pleaseInputUserId":"請輸入輸入用戶Id",
         "pleaseInputEvent":"請輸入績效內容",
         "pleaseInputEventTime":"請輸入績效時間",
@@ -305,6 +306,7 @@
         "totalQuantifier":"條",
         "pageQuantifier":"/頁",
         "to":"到",
+        "delete":"移除",
         "submit":"保存",
         "pleaseSelectType":"請選擇類別",
         "pleaseSelectTime":"請選擇時間",
@@ -312,8 +314,46 @@
         "Pending":"待審核",
         "Approved":"已審核",
         "Closed":"已結算",
+        "Removed":"已取消"
+    },
+    "leaveList":{
+        "search":"搜尋",
+        "userId":"用戶Id",
+        "to":"到",
+        "status":"狀態",
+        "All":"全部",
+        "Pending":"待審核",
+        "Approved":"已審核",
+        "Closed":"已結算",
         "Removed":"已取消",
-        "":""
+        "col-applyUser":"申請用戶",
+        "col-userId":"用戶Id",
+        "col-userName":"用戶名稱",
+        "col-createdTime":"創建時間",
+        "col-startTime":"開始時間",
+        "col-endTime":"結束時間",
+        "col-info":"請假內容",
+        "col-type":"請假類型",
+        "col-performanceRatio":"比例績效",
+        "col-status":"績效狀態",
+        "col-review":"審核",
+        "total":"總數",
+        "totalQuantifier":"條",
+        "pageQuantifier":"/頁",
+        "applyPerformance":"績效申請",
+        "save":"保存",
+        "inputUserId":"輸入用戶Id",
+        "selectUser":"選擇用戶",
+        "pleaseInputUserId":"請輸入輸入用戶Id",
+        "pleaseInputEvent":"請輸入績效內容",
+        "pleaseInputEventTime":"請輸入績效時間",
+        "pleaseInputAmount":"請至少輸入其中一績效金額",
+        "reviewPerformance":"績效審核",
+        "performanceId":"假單Id",
+        "btn-approved":"通過審核",
+        "btn-save":"暫存",
+        "btn-rejected":"駁回假單",
+        "pleaseSaveFirst":"請先做儲存才能通過審核"
     },
 
 
