update leaveList apply leave

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -327,21 +327,23 @@
         "Approved":"Approved",
         "Closed":"Closed",
         "Removed":"Rejected",
+        "col-id":"Leave Id",
         "col-applyUser":"Apply User",
         "col-userId":"User Id",
         "col-userName":"User Name",
+        "col-time":"Leave Time",
         "col-createdTime":"Create Time",
         "col-startTime":"Start Time",
         "col-endTime":"End Time",
         "col-info":"Info",
         "col-type":"Leave Type",
         "col-performanceRatio":"Performance Ratio",
-        "col-status":"Performance Status",
+        "col-status":"Leave Status",
         "col-review":"Review",
         "total":"Total",
         "totalQuantifier":"",
         "pageQuantifier":"/page",
-        "applyPerformance":"Apply Performance",
+        "applyLeave":"Apply Leave",
         "save":"Save",
         "inputUserId":"Input UserId",
         "selectUser":"Select User",
@@ -349,7 +351,8 @@
         "leaveId":"Leave Id",
         "btn-approved":"Approved",
         "btn-save":"Save",
-        "btn-rejected":"Rejected"
+        "btn-rejected":"Rejected",
+        "success":"操作成功"
     },
 
 
