--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -327,21 +327,23 @@
         "Approved":"已審核",
         "Closed":"已結算",
         "Removed":"已駁回",
+        "col-id":"假單號",
         "col-applyUser":"申請用戶",
         "col-userId":"用戶Id",
         "col-userName":"用戶名稱",
+        "col-time":"請假時間",
         "col-createdTime":"創建時間",
         "col-startTime":"開始時間",
         "col-endTime":"結束時間",
         "col-info":"請假內容",
         "col-type":"請假類型",
         "col-performanceRatio":"比例績效",
-        "col-status":"績效狀態",
+        "col-status":"假單狀態",
         "col-review":"審核",
         "total":"總數",
         "totalQuantifier":"條",
         "pageQuantifier":"/頁",
-        "applyPerformance":"績效申請",
+        "applyLeave":"假單申請",
         "save":"保存",
         "inputUserId":"輸入用戶Id",
         "selectUser":"選擇用戶",
@@ -349,7 +351,8 @@
         "leaveId":"假單Id",
         "btn-approved":"通過審核",
         "btn-save":"暫存",
-        "btn-rejected":"駁回假單"
+        "btn-rejected":"駁回假單",
+        "success":"操作成功"
     },
 
 
