update router, init projectList

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -383,7 +383,8 @@
         "personalPerformance":"Personal Performance",
         "performanceList":"Performance List",
         "personalLeave":"Personal Leave",
-        "leaveList":"Leave List"
+        "leaveList":"Leave List",
+        "projectList":"Project List"
     },
     "axios":{
         "reLogin":"Your session has expired. Please log in again."
