--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -382,7 +382,8 @@
         "personalPerformance":"個人績效",
         "performanceList":"績效管理",
         "personalLeave":"個人休假",
-        "leaveList":"休假清單"
+        "leaveList":"休假清單",
+        "projectList":"專案清單"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
