update new notification show popup message

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -393,6 +393,7 @@
         "kickOut":"Account has been disabled. You have been logged out."
     },
     "notification":{
+        "new":"New",
         "sysInit":"System Initialize.",
         "updateUser":"User[{0}] update your personal information.",
         "editSalaryRoot":"Salary Adjustment Notification.",
