update projectList add markColor

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -369,7 +369,8 @@
         "scheduledEndTime":"EndTime",
         "info":"Info",
         "manager":"Manager",
-        "status":"Status"
+        "status":"Status",
+        "markColor":"Mark Color"
     },
 
 
