update project status popconfirm

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -375,7 +375,10 @@
         "status":"Status",
         "markColor":"Mark Color",
         "edit":"Edit",
-        "selectManager":"Select Manager"
+        "selectManager":"Select Manager",
+        "statusOk":"OK",
+        "statusCencel":"cencel",
+        "statusAsk":"Are you sure to edit status?"
     },
 
 
