--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -375,7 +375,10 @@
         "status":"專案狀態",
         "markColor":"標記顏色",
         "edit":"編輯",
-        "selectManager":"選擇負責人"
+        "selectManager":"選擇負責人",
+        "statusOk":"確認",
+        "statusCencel":"取消",
+        "statusAsk":"確定更改專案狀態?"
     },
 
 
