--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -90,9 +90,6 @@
             "true":"鎖定中",
             "false":"未鎖定"
         },
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "search":"搜尋",
         "applyNewUser":"申請新用戶",
         "cancel":"取消",
@@ -209,9 +206,6 @@
         "col-nationalHealthInsurance":"健保",
         "col-time":"上次編輯時間",
         "col-config":"設置",
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "search":"搜尋",
         "addNewRoot":"新增薪資設定",
         "editRoot":"編輯薪資設定",
@@ -239,9 +233,6 @@
         "col-fixedBonus":"固定績效",
         "col-performanceRatio":"比例績效",
         "col-status":"績效狀態",
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "applyPerformance":"績效申請",
         "submit":"保存",
         "pleaseInputEvent":"請輸入績效內容",
@@ -272,9 +263,6 @@
         "col-performanceRatio":"比例績效",
         "col-status":"績效狀態",
         "col-review":"審核",
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "applyPerformance":"績效申請",
         "save":"保存",
         "inputUserId":"輸入用戶Id",
@@ -307,9 +295,6 @@
         "col-info":"請假事由",
         "col-status":"假單狀態",
         "col-edit":"編輯",
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "to":"到",
         "delete":"移除",
         "submit":"保存",
@@ -344,9 +329,6 @@
         "col-type":"請假類型",
         "col-status":"假單狀態",
         "col-review":"審核",
-        "total":"總數",
-        "totalQuantifier":"條",
-        "pageQuantifier":"/頁",
         "applyLeave":"假單申請",
         "save":"保存",
         "inputUserId":"輸入用戶Id",
@@ -488,5 +470,10 @@
         "marriage": "婚假",
         "bereavement": "喪假",
         "publicHoliday": "公假"
+    },
+    "paging":{
+        "total":"總數",
+        "totalQuantifier":"條",
+        "pageQuantifier":"/頁"
     }
 }
