--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -90,9 +90,6 @@
             "true":"Lock",
             "false":"UnLock"
         },
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/page",
         "search":"Search",
         "applyNewUser":"Apply New User",
         "cancel":"Cancel",
@@ -209,9 +206,6 @@
         "col-nationalHealthInsurance":"NationalHealthInsurance",
         "col-time":"LastEditTime",
         "col-config":"Config",
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/page",
         "search":"Search",
         "addNewRoot":"Add New Setting",
         "editRoot":"Edit Salary Setting",
@@ -239,9 +233,6 @@
         "col-fixedBonus":"Fixed Bonus",
         "col-performanceRatio":"Performance Ratio",
         "col-status":"Performance Status",
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/page",
         "applyPerformance":"Apply Performance",
         "submit":"Save",
         "pleaseInputEvent":"Please Input Event",
@@ -272,9 +263,6 @@
         "col-performanceRatio":"Performance Ratio",
         "col-status":"Performance Status",
         "col-review":"Review",
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/page",
         "applyPerformance":"Apply Performance",
         "save":"Save",
         "inputUserId":"Input UserId",
@@ -307,9 +295,6 @@
         "col-info":"Leave Info",
         "col-status":"Status",
         "col-edit":"Edit",
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/Page",
         "to":"to",
         "delete":"Delete",
         "submit":"Save",
@@ -344,9 +329,6 @@
         "col-type":"Leave Type",
         "col-status":"Leave Status",
         "col-review":"Review",
-        "total":"Total",
-        "totalQuantifier":"",
-        "pageQuantifier":"/page",
         "applyLeave":"Apply Leave",
         "save":"Save",
         "inputUserId":"Input UserId",
@@ -489,5 +471,10 @@
         "marriage": "Marriage Leave",
         "bereavement": "Bereavement Leave",
         "publicHoliday": "Public Holiday Leave"
+    },
+    "paging":{
+        "total":"Total",
+        "totalQuantifier":"",
+        "pageQuantifier":"/page"
     }
 }
