--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -429,7 +429,8 @@
         "personalLeave":"個人休假",
         "leaveList":"休假清單",
         "projectList":"專案清單",
-        "procureList":"採購清單"
+        "procureList":"採購清單",
+        "jobCard":"任務卡"
     },
     "axios":{
         "reLogin":"登入過期，請重新登入"
